# nixcov

./: .gitignore  Cargo.toml  README.md  coverage.lcov  default.nix  flake.nix  nirion.json  test.info
nixcov/: Cargo.toml
nixcov-instrument/: Cargo.toml
nixcov-instrument/src/: main.rs
nixcov-lib/: Cargo.toml
nixcov-lib/src/: ansi.rs  lib.rs  table.rs
nixcov/src/: main.rs
nixtrument/: Cargo.toml
nixtrument-instrument/: Cargo.toml
nixtrument-instrument/src/: main.rs
nixtrument-lib/: Cargo.toml
nixtrument-lib/src/: lib.rs
nixtrument/src/: main.rs
src/: main.rs
