[package]
name = "nixcov-instrument"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Nix source instrumentation binary for nixcov"
authors = ["Florian Nalu Adam"]

[[bin]]
name = "nixcov-instrument"
path = "src/main.rs"

[dependencies]
nixcov-lib = { path = "../nixcov-lib" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.103"
