[package]
name = "nixtrument-instrument"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Nix source instrumentation binary for nixtrument"
authors = ["Florian Nalu Adam"]

[[bin]]
name = "nixtrument-instrument"
path = "src/main.rs"

[dependencies]
nixtrument-lib = { path = "../nixtrument-lib" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.103"
