[package]
name = "nixtrument-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared library for nixtrument"
authors = ["Florian Nalu Adam"]

[dependencies]
anyhow = "1.0.103"
rnix = "0.14.0"
rowan = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
